[package]
name = "rust-grpc-examples"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-server-blocking"
path = "src/helloworld/server_blocking.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"


[dependencies]
tonic = { version = "0.5", features = ["tls", "compression"] }
prost = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = { version = "0.4" }
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.8"
# Hyper example
hyper = { version = "0.14", features = ["full"] }
warp = "0.3"
http = "0.2"
http-body = "0.4.2"
pin-project = "1.0"
## Health example
#tonic-health = "0.4"
## Reflection example
#tonic-reflection = "0.2"
#listenfd = "0.3"
## grpc-web example
#tonic-web = "0.1"
#bytes = "1"

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost", "compression"] }